# habits_course_work

./: .env.sample  dump.rdb  pyproject.toml
config/: settings.py  telegram_service.py  urls.py
habits/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_last_completed_alter_habit_duration_and_more.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_telegram_id.py
